--- a/ansible-demo/mrc/roles/openstack-volume-snapshot/tasks/main.yaml
+++ b/ansible-demo/mrc/roles/openstack-volume-snapshot/tasks/main.yaml
@@ -3,9 +3,10 @@
 - name: Create volume snapshot(s)
   openstack.cloud.volume_snapshot:
     state: present
-    volume: "{{ item.vol_name }}"
+    volume: '{{ item.vol_name }}'
     display_name: "{{ item.vol_name }}-{{ lookup('pipe', 'date +%Y-%m-%d-%H-%M-%S') }}"
     wait: yes
     timeout: 600
     force: yes
-  loop: "{{ volumes }}"
+    availability_zone: '{{ availability_zone }}'
+  loop: '{{ volumes }}'
