--- a/ansible-demo/wordpress/wordpress.yaml
+++ b/ansible-demo/wordpress/wordpress.yaml
@@ -4,8 +4,8 @@
   gather_facts: false
   vars:
     - ansible_user: ubuntu
-    - ansible_ssh_private_key_file: ~/.ssh/id_alwyn
-    - ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+    - ansible_ssh_private_key_file: ~/.ssh/id_rsa
+    - ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
 
   roles:
     - role: common
